<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.appspot.simple_ticker.hartenholmticker.ui.ticker.TickerEntryActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/entry_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/ColorPrimary"
        android:elevation="2dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
        xmlns:android="http://schemas.android.com/apk/res/android" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/entry_minute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_weight="1"
            android:hint="@string/minute_hint"/>

        <EditText
            android:id="@+id/entry_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textMultiLine"
            android:hint="@string/content_hint"
            android:lines="5"/>

        <Button
            android:id="@+id/entry_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticker_entry_commit"
            android:layout_gravity="end"/>

    </LinearLayout>

</LinearLayout>  